public/css/main.css
* {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 0.9rem;
}

body {
  background-color: #91c3f5;
  background-image: url("/img/animal-04.png");
}

a {
  color: inherit;
}

footer {
  padding: 10px 5px 5px 5px;
  background: #a5c7eb url("/img/dots-bg.png") repeat-x;
  color: #4c71a8;
}

footer a :hover {
  opacity: 0.9;
}

.container-main {
  max-width: 900px;
  background: #c1e0ff;
  box-shadow: 0 0 5px rgb(76, 113, 168);
  border: solid 1px rgb(76, 113, 168);
  padding: 0;
}

.nav {
  border-top: solid #7095cb 1px;
  border-bottom: solid rgba(76,113,168,1) 1px;
  padding: 0px 5px;
  background: rgb(76,113,168);
  background: linear-gradient(0deg, rgba(76,113,168,1) 0%, rgba(93,135,196,1) 50%, rgba(112,149,203,1) 50%, rgba(202,220,247,1) 100%);
}

.nav .container-fluid {
  padding: 0;
}

.navbar-nav {
  gap: 3px;
}

/* pink
.nav {
  background: #e3f1ff;
  border-top: solid rgb(76, 113, 168) 1px;
  border-bottom: solid rgba(202,53,137,1) 1px;
  padding: 0px 5px;
  gap: 3px;
  background: rgb(202,53,137);
  background: linear-gradient(0deg, rgba(202,53,137,1) 0%, rgba(196,93,154,1) 50%, rgba(203,112,170,1) 50%, rgba(247,202,232,1) 100%);
*/

.nav-link {
  color: white;
  padding: 3px 10px !important;
  font-weight: bold;
  transition: none;
}

.nav-link:hover,
.nav-link:focus,
.nav-link:active {
  color: white;
  background: rgba(76,113,168,1);
  transition: none;
}

@media (max-width: 575px) {
  .nav {
    padding: 0 0 5px 0;
    gap: 3px;
    background: #C1E0FF;
    border: none;
  }

  .navbar-nav {
    gap: 0;
  }

  .nav-banner {
    max-width: 100%;
    height: auto;
  }

  .nav-banner-container {
    flex-grow: 1;
  }

  .navbar-toggler-container {
    display: flex;
    width: 100%;
    border-bottom: 1px solid #91c3f5;
  }

  .navbar-toggler {
    background-color: #91c3f5;
    color: white;
    border-radius: 0;
    border: none;
  }

  .navbar-toggler:focus {
    box-shadow: none;
    outline: none;
  }

  .nav-link {
    color: white;
    padding: 6px 10px;
    font-weight: bold;
    transition: none;
    background: linear-gradient(90deg, rgba(76,113,168,1) 50%, #91c3f5 90%);
    border-bottom: 1px solid #91c3f5;
  }
}

.banner {
  padding: 5px;
}

.img-banner {
  width: 100%;
  height: auto;
}

.box {
  padding: 5px;
}

.sidebar {
  background: rgb(189, 219, 250);
}

.lastfm {
  padding: 0 5px;
  border: 1px solid #a5c7eb;
}

.lastfm a {
  text-decoration: none;
  line-height: 110%;
}

.lastfm img {
  border: 1px solid #a5c7eb;
}

.lastfm a:hover {
  text-decoration: underline;
}

.lastfm a:hover img {
  border: 1px solid black;
}

.lastfm-credit a {
  opacity: 0.5;
  text-decoration: none;
}

.lastfm-credit a:hover {
  text-decoration: underline;
}

.gradient-box {
  text-decoration: none;
  background: linear-gradient(
    0deg,
    rgb(189, 219, 250) 0%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(76, 113, 168);
  border-radius: 5px;
}

.gradient-box:hover {
  background: linear-gradient(
    0deg,
    rgb(189, 219, 250) 70%,
    rgb(239, 247, 255) 100%
  );
}

.scan-container {
  height: 122px;
}

.scan-container img {
  max-height: 100%;
  width: 90px;
  min-width: 90px;
  object-fit: contain;
}

.scan-container .desc {
  line-height: 110%;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-shrink: 2;
}

.scan-container .top {
  line-height: 110%;
}

.scan-container .release-info {
  opacity: 0.7;
  line-height: 90%;
  font-size: 0.7rem;
}

.badges {
  padding: 4px 0 0 0;
  border-top: 1px dotted rgb(76, 113, 168);
  border-bottom: 1px dotted rgb(76, 113, 168);
  margin: 4px 0 4px 0;
  height: 27px;
  overflow: hidden;
}

.badges-lg {
  padding: 9px 0 9px 0;
  border-top: 1px dotted rgb(76, 113, 168);
  border-bottom: 1px dotted rgb(76, 113, 168);
  margin: 4px 0 4px 0;
}

.cbadge {
  font-size: 0.7rem;
  border-radius: 5px;
  padding: 0 5px;
  color: white;
  margin: 0 2px 4px 0;
  white-space: nowrap;
}

.cbadge-lg {
  border-radius: 5px;
  padding: 3px 7px;
  color: white;
  margin-right: 4px;
}

.badge-blue {
  background: linear-gradient(
    0deg,
    rgb(76, 113, 168) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(40, 77, 133);
}

.badge-gray {
  background: linear-gradient(
    0deg,
    rgb(104, 104, 104) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(53, 53, 53);
}

.badge-orange {
  background: linear-gradient(
    0deg,
    rgb(216, 110, 11) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(160, 96, 13);
}

.badge-pink {
  background: linear-gradient(
    0deg,
    rgb(212, 68, 169) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(160, 60, 115);
}

.badge-green {
  background: linear-gradient(
    0deg,
    rgb(64, 173, 31) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(61, 136, 31);
}

.badge-teal {
  background: linear-gradient(
    0deg,
    rgb(19, 168, 168) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(31, 136, 131);
}

.badge-purple {
  background: linear-gradient(
    0deg,
    rgb(138, 88, 230) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(125, 54, 172);
}

.badge-red {
  background: linear-gradient(
    0deg,
    rgb(192, 67, 67) 75%,
    rgb(239, 247, 255) 100%
  );
  border: 1px solid rgb(145, 40, 40);
}

.scan-thumb-container {
  opacity: 0.5;
}

.scan-thumb-container:hover {
  opacity: 1;
}

.scan-thumb {
  background-color: rgb(189, 219, 250);
  padding: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.scan-thumb img {
  height: 120px;
  object-fit: cover;
  border-radius: 5px;
}

.scan-img-info {
  line-height: 120%;
  font-size: 0.75rem;
}

.scan-img-info a {
  text-decoration: none;
  font-size: 0.75rem;
  opacity: 0.5;
}

.scan-img-info a:hover {
  text-decoration: underline;
  opacity: 1;
}

.title-lg h4 {
  font-weight: bold;
}

.scan-info {
  padding-top: 4px;
  border-top: 1px dotted rgb(76, 113, 168);
  font-size: 0.8rem;
  line-height: 130%;
}

.dl {
  color: rgb(76, 113, 168);
  background: linear-gradient(
    0deg,
    rgb(130, 188, 255) 0%,
    rgb(255, 254, 254) 100%
  );
  padding: 2px 10px;
  border-radius: 5px;
  border: 1px solid rgb(76, 113, 168);
  font-weight: bold;
  transition: none;
  text-decoration: none;
}

.dl:hover,
.dl:focus,
.dl:active {
  color: white;
  background: linear-gradient(
    0deg,
    rgb(130, 188, 255) 70%,
    rgb(255, 254, 254) 100%
  );
  font-style: italic;
  transition: none;
}

hr {
  opacity: 1;
  border-top: 1px dashed #a5c7eb;
}

h1 {
  font-size: 1.2rem;
  font-weight: bold;
  border: 1px solid white;
  background-color: rgba(93,135,196,1);
  border-radius: 10px 35px 5px 5px;
  color: white;
  padding: 5px 8px 4px 8px;
}

h2 {
  font-size: 1rem;
  font-weight: bold;
  border: 1px solid white;
  background-color: rgba(93,135,196,1);
  color: white;
  padding: 5px 5px 4px 10px;
  border-radius: 5px 5px 35px 10px;
  width: 50%;
  margin-bottom: 10px;
}

h2::before {
  content: "-";
  margin-right: 6px;
  background-color: white;
}

.img-fluid-col {
  width: 100%;
  height: auto;
}

